# Siamtracker_Android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/siamtracker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  anchor.cpp  anchor.h  config.cpp  config.h  siam_tracker.cpp  siam_tracker.h  siam_tracker_wrapper.cpp  siamrpn.cpp  siamrpn.h  siamtracker.cpp
app/src/main/cpp/include/MNN/: AutoTime.hpp  ErrorCode.hpp  HalideRuntime.h  ImageProcess.hpp  Interpreter.hpp  MNNForwardType.h  Matrix.h  Rect.h  Tensor.hpp
app/src/main/cpp/include/MNN/expr/: Executor.hpp  Expr.hpp  MathOp.hpp  NeuralNetWorkOp.hpp  Optimizer.hpp
app/src/main/cpp/include/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  opencv.hpp  photo.hpp  stitching.hpp  videoio.hpp
app/src/main/cpp/include/opencv2/core/: affine.hpp  base.hpp  bindings_utils.hpp  check.hpp  core_c.h  cuda.hpp  cv_cpu_dispatch.h  cvdef.h  cvstd.inl.hpp  cvstd_wrapper.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  neon_utils.hpp  operations.hpp  optim.hpp  persistence.hpp  types.hpp  utility.hpp  vsx_utils.hpp
app/src/main/cpp/include/opencv2/core/hal/: intrin.hpp  intrin_avx.hpp  intrin_avx512.hpp  intrin_cpp.hpp  intrin_msa.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp  intrin_wasm.hpp
app/src/main/cpp/include/opencv2/core/opencl/: opencl_info.hpp
app/src/main/cpp/include/opencv2/core/utils/: logger.hpp  tls.hpp
app/src/main/cpp/include/opencv2/dnn/: all_layers.hpp  dnn.hpp  dnn.inl.hpp  version.hpp
app/src/main/cpp/include/opencv2/dnn/utils/: inference_engine.hpp
app/src/main/cpp/include/opencv2/flann/: all_indices.h  any.h  autotuned_index.h  composite_index.h  defines.h  dist.h  dynamic_bitset.h  flann_base.hpp  general.h  ground_truth.h  heap.h  hierarchical_clustering_index.h  index_testing.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  lsh_table.h  matrix.h  miniflann.hpp  nn_index.h  params.h  random.h  result_set.h  sampling.h  saving.h  simplex_downhill.h  timer.h
app/src/main/cpp/include/opencv2/objdetect/: detection_based_tracker.hpp
app/src/main/cpp/include/opencv2/stitching/: warpers.hpp
app/src/main/cpp/include/opencv2/stitching/detail/: blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  util.hpp  warpers.hpp  warpers_inl.hpp
app/src/main/cpp/include/opencv2/video/: background_segm.hpp  tracking.hpp
app/src/main/java/com/example/siamtracker/: AutoFitTextureView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/test/java/com/example/siamtracker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
